[Scorecards] Added alignment fix for headings in homepage
Added a fix when the users deactivate 'Display percentage point change' so the aligment goes from center to left.

--- a/scoring/static/scoring/scss/scoring-table.scss
+++ b/scoring/static/scoring/scss/scoring-table.scss
@@ -61,6 +61,12 @@ $border-table: 1px solid transparentize($color: $black, $amount: 1);
             max-width: $default-cell-width;
             min-width: $default-cell-width;
         }
+
+        .js-previous-year-difference-header {
+            .section-title {
+                justify-content: left;
+            }
+        }
     }
 
     th {
